# zero_sum

./: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
anchor/: Anchor.toml  tsconfig.json
anchor/programs/zero_sum/: Cargo.toml
anchor/programs/zero_sum/src/: lib.rs
anchor/programs/zero_sum/src/common/: constants.rs  enums.rs  errors.rs  events.rs  mod.rs  utils.rs
anchor/programs/zero_sum/src/instructions/: cancel_game.rs  close_game.rs  create_game.rs  draw_game.rs  fetch_price.rs  join_game.rs  mod.rs  withdraw.rs
anchor/programs/zero_sum/src/state/: game_state.rs  mod.rs
anchor/src/: index.ts  zero_sum-exports.ts
anchor/tests/: id2.json  test_utils.ts  zero_sum.spec.ts
scripts/: build_anchor.sh  checkProgramId.ts  new_key_wip.sh  redeploy.sh  seed.ts
src/: .env
src/app/: layout.tsx  page.tsx
src/app/zero_sum/: page.tsx
src/components/ui/: ui-layout.tsx
src/components/zero_sum/: constants.ts  types.ts  zero_sum-data-access.tsx  zero_sum-feature.tsx  zero_sum-game.tsx  zero_sum-ui.tsx
src/components/zero_sum/features/: CommunityGames.tsx  CreateGame.tsx  GameStatistics.tsx  OpenGames.tsx  PriceMonitor.tsx  UserGames.tsx
src/components/zero_sum/features/components/: ActionButton.tsx  EmptyGamesState.tsx  GameStatusTag.tsx  (+5 more)
src/components/zero_sum/hooks/: useChainlinkPriceFeed.ts
src/components/zero_sum/types/: components.ts  events.ts  game.ts  hooks.ts  price.ts
src/components/zero_sum/utils/: eventUtils.ts  gameUtils.ts  getGameStatus.tsx  predictionUtils.ts  timeUtils.ts  utils.ts
wallets/: id1.json
